# bindusara-reddy.github.io

./: .gitignore  404.html  README.md  _config.yml  index.html  poem.html  script.js  styles.css
Clip/: gallery.html
Clip/catto/: 1.heic
Memory/: playlist.html
Note/: helloworld.html
Thought/: intelligence.html  lab.js  nn.js  weights.js
app/: site_wasm.js  site_wasm_bg.wasm
blog/: helloworld.html
site-wasm/: Cargo.toml
site-wasm/src/: engine.rs  lib.rs  pages.rs  util.rs
site-wasm/src/nn/: bowl.rs  features.rs  hero.rs  lab.rs  mod.rs  neuron.rs  numbers.rs
site-wasm/trainer/: Cargo.toml
site-wasm/trainer/src/: main.rs
